# detect-dates

./: .gitignore  README.md  docsting_prompt.md  download_date.py  download_date_month.py  hijri_calendar_complete.csv  hijri_calendar_complete.json  hijri_data_partial_100.csv  lint.yml  main.py  persiantools_test.py  pyproject.toml  read_downloaded_files.py  remove_nulls.py  remove_pycache.py  requirements-dev.txt  requirements.txt  setup.py
detect-dates-files/: Untitled-1.ini  Untitled-1.py  Untitled-3.ini  Untitled-3.py  calendar_conversion_utils copy.py  complex_dataclass.py  composite_dataclass copy.py  date_detectiohn.py  date_detection copy.py  date_detection.py  date_mapping copy.py  date_mapping.py  date_mapping_.py  date_mapping_alt.py  date_out_class.py  date_parsing_lib.py  demo_date_parsing_lib.py  example_usage.py  examples_test copy.py  examples_test.py  examples_test1.py  get_standard_date.py  get_variants.py  import re.py  normalize_month1.py  normalize_weekday.py  old_new copy.py  old_new.py  ollama.py  parsed.py  parsed1.py  path_helper.py  regex_parsed.py  standard_date_format.py  structure.md  test.py  test111.py  test11yuo.py  test12112.py  test2.py  (+6 more)
detect-dates-files/.github/workflows/: lint.yml  release.yml  test.yml  test_with_coverage.yml
detect-dates-files/source/: index.md  index.rst  installation.rst  versions.html
detect-dates-files/source/_static/: custom.css
docs/: README.md
docs/source/: conf.py  index.md  layout.html
docs/source/api/: normalizers.md
docs/source/user-guide/: index.rst
examples/: all_examples.py  uncat_examples.py
src/detect_dates/: __init__.py  main.py  path_helper.py
src/detect_dates/calendar_variants/: __init__.py  calendar_conversion_utils copy.py  calendar_conversion_utils.py  calender_yr_to_yr_cal.py  cc.py  century_utils.py  date_mapping copy.py  date_mapping.py  date_variants.py  def find_date_by_weekday(.py  get_match_value.py  normalize_component.py  ordinal_suffix.py
src/detect_dates/calendar_variants/utils/: century.py  century_utils.py  find_date_row.py  ordinal_suffix.py  year_converter.py
src/detect_dates/data/: __init__.py  calendar_data_loader.py  config_loader.py  date_data_loader.py  mapping_loader.py
src/detect_dates/data/mapping_date/: Hijri-Gregorian-Solar_Hijri-V3.csv
src/detect_dates/data/utils/: _load_mapping_data.py  _validate_date_ranges.py
src/detect_dates/detector/: date_out_class.py  get_match_value.py  normalize_component.py
src/detect_dates/detector/classes/: entity.py  parsed.py  regex_parsed.py
src/detect_dates/find/: normalize_component.py  normalize_output.py
src/detect_dates/find/classes/: __init__.py  components.py  components_default.py  date_out_class.py  entity.py  entity1.py  meta.py  parsed copy.py  parsed.py  regex_parsed.py
src/detect_dates/find/utils/: get_match_value.py
src/detect_dates/keywords/: __init__.py  constants.py  era.py  month.py  numeric_words.py  path_helper.py  search.py  separator.py  weekday.py
src/detect_dates/normalizers/: __init__.py  calendar.py  calendar_from_era.py  calendar_name.py  era.py  key.py  month.py  normalize_input_date.py  normalize_output.py  numeric_words.py  weekday.py
src/detect_dates/patterns/: __init__.py  date_detector.py  date_detector1.py  pattern_db.py
src/detect_dates/patterns/classes/: __init__.py  _base.py  _complex.py  _composite.py  _simple.py  _validator.py  date.py
src/detect_dates/patterns/dicts/: __init__.py  _complex.py  _components.py  _composite.py  _numeric_words.py  _simple.py  _simple_unknown.py
src/detect_dates/regex_patterns/: __init__.py  get_date_patterns.py  get_pattern.py  keywords_to_regex.py  path_helper.py  string_utils.py
src/detect_dates/utils/: __init__.py  deduplicate.py  ordinal_suffix.py  year_calender_cal.py
tests/: test_math_utils.py
